--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/Player/character_0004.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Assets/", "res://Assets/Tiles/", "res://Assets/Player/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/coin.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/")
 dock_split_1=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,19 +28,19 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Main.tscn")
-current_scene="res://Scenes/Main.tscn"
+open_scenes=PackedStringArray("res://Scenes/Main.tscn", "res://Scenes/player.tscn", "res://Scenes/coin.tscn")
+current_scene="res://Scenes/coin.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_main_editor_idx=0
+selected_bottom_panel_item=4
 
 [ScriptEditor]
 
-open_scripts=["res://Scenes/Player.gd"]
-selected_script="res://Scenes/Player.gd"
-open_help=[]
-script_split_offset=150
+open_scripts=["res://Scenes/coin.gd", "res://Scenes/gameCamera.gd", "res://Scenes/Player.gd"]
+selected_script="res://Scenes/coin.gd"
+open_help=["@GDScript", "@GlobalScope", "Node"]
+script_split_offset=151
 list_split_offset=0
 
 [ShaderEditor]
