Player Death / Respawn
Added BaseLevel scene and script
player hazard area
added spikes
added respawn mechanic

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,15 +12,15 @@ dock_floating={}
 dock_split_2=-127
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=170
-dock_hsplit_3=-216
+dock_hsplit_2=333
+dock_hsplit_3=-358
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Assets/Coin/tile_0151.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Assets/", "res://Assets/Coin/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Main.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Assets/")
 dock_split_1=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,17 +28,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Main.tscn", "res://Scenes/player.tscn", "res://Scenes/coin.tscn")
-current_scene="res://Scenes/coin.tscn"
+open_scenes=PackedStringArray("res://Scenes/Main.tscn", "res://Scenes/player.tscn", "res://Scenes/coin.tscn", "res://Scenes/spikes.tscn", "res://Scenes/base_level.tscn")
+current_scene="res://Scenes/base_level.tscn"
 center_split_offset=-252
-selected_default_debugger_tab_idx=1
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scenes/coin.gd", "res://Scenes/gameCamera.gd", "res://Scenes/Player.gd"]
-selected_script="res://Scenes/coin.gd"
+open_scripts=["res://Scenes/base_level.gd", "res://Scenes/coin.gd", "res://Scenes/gameCamera.gd", "res://Scenes/Player.gd"]
+selected_script="res://Scenes/base_level.gd"
 open_help=["@GDScript", "@GlobalScope", "Node"]
 script_split_offset=151
 list_split_offset=0
