--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Main.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/enemy_goal.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Assets/")
 dock_split_1=0
 dock_3="Scene,Import"
@@ -28,17 +28,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Main.tscn", "res://Scenes/player.tscn", "res://Scenes/coin.tscn", "res://Scenes/spikes.tscn", "res://Scenes/base_level.tscn")
-current_scene="res://Scenes/base_level.tscn"
-center_split_offset=-252
+open_scenes=PackedStringArray("res://Scenes/base_level.tscn", "res://Assets/enemy/enemy.tscn", "res://Scenes/player.tscn", "res://Scenes/enemy_goal.tscn")
+current_scene="res://Assets/enemy/enemy.tscn"
+center_split_offset=-444
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_main_editor_idx=0
+selected_bottom_panel_item=9
 
 [ScriptEditor]
 
-open_scripts=["res://Scenes/base_level.gd", "res://Scenes/coin.gd", "res://Scenes/gameCamera.gd", "res://Scenes/Player.gd"]
-selected_script="res://Scenes/base_level.gd"
+open_scripts=["res://Scenes/base_level.gd", "res://Scenes/coin.gd", "res://Assets/enemy/enemy.gd", "res://Scenes/gameCamera.gd", "res://Scenes/Player.gd"]
+selected_script="res://Assets/enemy/enemy.gd"
 open_help=["@GDScript", "@GlobalScope", "Node"]
 script_split_offset=151
 list_split_offset=0
