--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/enemy_goal.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/flag.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Levels/", "res://Assets/")
 dock_split_1=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,18 +28,18 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/base_level.tscn", "res://Assets/enemy/enemy.tscn", "res://Scenes/player.tscn", "res://Scenes/enemy_goal.tscn")
-current_scene="res://Assets/enemy/enemy.tscn"
+open_scenes=PackedStringArray("res://Levels/level_001.tscn", "res://Scenes/player.tscn", "res://Scenes/flag.tscn", "res://Scenes/base_level.tscn")
+current_scene="res://Scenes/flag.tscn"
 center_split_offset=-444
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=9
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scenes/base_level.gd", "res://Scenes/coin.gd", "res://Assets/enemy/enemy.gd", "res://Scenes/gameCamera.gd", "res://Scenes/Player.gd"]
-selected_script="res://Assets/enemy/enemy.gd"
-open_help=["@GDScript", "@GlobalScope", "Node"]
+open_scripts=["res://Scenes/base_level.gd", "res://Assets/enemy/enemy.gd", "res://Scenes/flag.gd", "res://Scenes/Player.gd"]
+selected_script="res://Scenes/flag.gd"
+open_help=["@GlobalScope"]
 script_split_offset=151
 list_split_offset=0
 
