--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -29,16 +29,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Levels/level_001.tscn", "res://Scenes/player.tscn", "res://Scenes/flag.tscn", "res://Scenes/base_level.tscn")
-current_scene="res://Scenes/flag.tscn"
+current_scene="res://Levels/level_001.tscn"
 center_split_offset=-444
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://Scenes/base_level.gd", "res://Assets/enemy/enemy.gd", "res://Scenes/flag.gd", "res://Scenes/Player.gd"]
-selected_script="res://Scenes/flag.gd"
+selected_script="res://Scenes/base_level.gd"
 open_help=["@GlobalScope"]
 script_split_offset=151
 list_split_offset=0
